--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,34 @@
-#depart_flow_map {
-	top:10;
-	bottom: 10; 
-	left: 10px;
-	right: 10px;
+body {
+    background-color: darkgray;
 }
 
-#bump {
-	top:10px;
-	bottom: 10px; 
-	left: 10px;
-	right: 10px;
+.page {
+    width: 1300px;
+    background-color: #F0F3FA;
+    margin: auto;
+    padding: 50px;
+    padding-top: 35px;
+}
+
+.container {
+    margin: 45px;
+    padding: 0;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+h1 {
+    padding: 0;
+    text-align: center;
+    font-size: 50px;
+    border-style: double;
+    border-color: black;
+    background-color: rgb(149, 176, 212);
+}
+
+h2 {
+    padding: 0;
+    text-align: center;
+    font-size: 35px;
+    border-style: solid;
+    background-color: lightsteelblue;
 }
