--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
 
 .page {
     width: 1300px;
-    background-color: #F0F3FA;
+    background-color: #FFF9F9;
     margin: auto;
     padding: 50px;
     padding-top: 35px;
@@ -22,7 +22,9 @@ h1 {
     font-size: 50px;
     border-style: double;
     border-color: black;
-    background-color: rgb(149, 176, 212);
+    border-width: 10px;
+    color: #BF0A30;
+    background-color: #FFE0E0;
 }
 
 h2 {
@@ -30,5 +32,42 @@ h2 {
     text-align: center;
     font-size: 35px;
     border-style: solid;
-    background-color: lightsteelblue;
+    border-color: black;
+    border-width: 3px;
+    color: #B43757;
+    background-color: #FFE0E0;
+}
+
+.departdelay {
+    color: #8B0000;
+    font-weight: bold;
+}
+
+.arrivedelay {
+    color: #FC7676;
+    font-weight: bold;
+}
+
+.Air_system {
+    color: #2271B2;
+}
+
+.Airline {
+    color: #F748A5;
+}
+
+.Late_aircraft {
+    color: #359B73;
+}
+
+.Security {
+    color: #F0E442;
+}
+
+.Weather {
+    color: #D55E00;
+}
+
+.bold {
+    font-weight: bold;
 }
